tdf#91306 xmloff: ODF export: allow style:page-number="0" in ODF 1.3

See OFFICE-3923.

Change-Id: I619d9efe3eb17feaf84f7dd21f5b2197c30bc6aa